--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "type": "module",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/app.js",
+        "dev": "nodemon src/app.js"
     },
     "keywords": [],
     "author": "",
